tests/paczka1/fuzzy1/27972908.err
Error in line 1: A836 A43 1,6
Error in line 8: vcAY0o4Wg A836 36,6
Error in line 17: vcAY0o4Wg A836 47,6
Error in line 20: vcAY0o4Wg S49 0,9
Error in line 27: bOUCHM67 S309 7,1
Error in line 12: ZjTm9MHUsQp S309 53,0
